@@ -1,3 +1,10 @@
+2005-02-24  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* acinclude.m4: Include bfd/bfd.m4 directly.
+	* configure.ac: Use AC_ARG_PROGRAM.  Suggested by Aron Griffis
+	<agriffis@toolchain.org>.
+	* aclocal.m4, configure: Regenerated.
+
 2005-01-07  Andrew Cagney  <cagney@gnu.org>
 
 	* configure.ac: Rename configure.in, require autoconf 2.59.
